# moses

./: .gitignore  CMakeLists.txt  README.md  checks.json
.github/workflows/: main.yml
doc/: in-memory IR.vsd  moses IR.md  moses-IR-example.md  moses0.1-LL(1).docx  moses0.1-grammar.docx  ~$ses0.1-grammar.docx
doc/Back-end/: SymbolTable.docx  SymbolTable.md  in-memory IR.md  moses IR.md
doc/Front-end/: Constant Folding in the AST.md  moses0.1-grammar.docx  moses0.1-grammar.md
src/: CMakeLists.txt  PreStoreToken.cpp  SourceLocation.h  Token.cpp  Token.h  TokenKinds.h  Type.cpp  Type.h  ast.cpp  ast.h  error.cpp  error.h  main.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  sema.cpp  sema.h
src/include/ExecutionEngine/: ExecutionEngine.h  GenericValue.h
src/include/IR/: BasicBlock.h  ConstantAndGlobal.h  ConstantFolder.h  Dominators.h  Function.h  IRType.h  Instruction.h  MosesIRContext.h  Use.h  User.h  Value.h  ValueSymbolTable.h
src/include/IRBuild/: CGCall.h  CGValue.h  CodeGenTypes.h  IRBuilder.h
src/include/Lexer/: PreStoreToken.h  Token.h  TokenKinds.h  scanner.h
src/include/Parser/: ASTContext.h  EvaluatedExprVisitor.h  Type.h  ast.h  constant-evaluator.h  parser.h  sema.h
src/include/Support/: Hasing.h  SourceLocation.h  SymbolTable.h  TypeSet.h  error.h
src/lib/: CMakeLists.txt  main.cpp
src/lib/ExecutionEngine/: CMakeLists.txt  ExecutionEngine.cpp
src/lib/IR/: BasicBlock.cpp  CMakeLists.txt  ConstantAndGlobal.cpp  Dominators.cpp  Function.cpp  IRType.cpp  Instruction.cpp  MosesIRContext.cpp  Value.cpp  ValueSymbolTable.cpp
src/lib/IRBuild/: CGCall.cpp  CGDecl.cpp  CGExpr.cpp  CGExprAgg.cpp  CGStmt.cpp  CMakeLists.txt  CodeGenModule.cpp  CodeGenTypes.cpp
test/: Factorial.mi  Factorial.mo  constant-evaluator.mo  main.mi  main.mo  moses.mi  parse.mo  sema.mo
(+16 files in other folders)
