cmake_minimum_required(VERSION 3.15)
project (moses)

SET(CMAKE_BUILD_TYPE "Debug")
ADD_DEFINITIONS("-W -Wall -Werror -std=c++2a")
ADD_SUBDIRECTORY(src)
ADD_EXECUTABLE(moses ${CMAKE_SOURCE_DIR}/src/lib/main.cpp)
TARGET_LINK_LIBRARIES(moses Engine IRSupport IR IRBuild Lexer Parser Support)

TARGET_INCLUDE_DIRECTORIES(moses PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(Engine PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(IRSupport PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(IR PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(IRBuild PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(Lexer PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(Parser PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
TARGET_INCLUDE_DIRECTORIES(Support PRIVATE ${CMAKE_SOURCE_DIR}/src/include)
